//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package core.foundation;

option java_package = "com.sandpolis.core.foundation";
option optimize_for = CODE_SIZE;

/**
 * An enumeration of all Sandpolis instance types.
 */
enum Instance {

    // An application connected to the Sandpolis network for debugging purposes
    CHARCOAL = 0;

    // An application that coordinates communication between clients and viewers
    SERVER = 1;

    // An application that runs continuously on hosts in the Sandpolis network
    CLIENT = 2;

    // An application used for managing clients and servers
    VIEWER = 3;

    // An application responsible for installing and updating other instances
    INSTALLER = 4;
}

/**
 * An enumeration of all official instance subtypes.
 */
enum InstanceFlavor {

    // Only valid for charcoal and installer instances types
    NONE = 0;

    // The official Java-based server instance
    VANILLA = 1;

    // The official cross-platform client instance
    MEGA = 2;

    // The official native client instance
    MICRO = 3;

    // The official terminal viewer instance
    ASCETIC = 4;

    // The official desktop viewer instance
    LIFEGEM = 5;

    // The official Android viewer instance
    SOAPSTONE = 6;

    // The official iOS viewer instance
    LOCKSTONE = 7;
}

/**
 * An enumeration of major OS families.
 */
enum OsType {
    UNKNOWN = 0;

    LINUX = 1;

    WINDOWS = 2;

    MACOS = 3;

    IOS = 4;

    ANDROID = 5;

    FREEBSD = 6;

    OPENBSD = 7;

    SOLARIS = 8;

    AIX = 9;
}
