//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package core.net;

import "com/sandpolis/core/instance/listener.proto";

option java_package = "com.sandpolis.core.net";
option optimize_for = CODE_SIZE;

// Request: Attempt a listener operation.
message RQ_ListenerOperation {
    enum ListenerOperation {
        LISTENER_CREATE = 0;
        LISTENER_DELETE = 1;
        LISTENER_UPDATE = 2;
    }
    ListenerOperation operation = 1;

    repeated core.instance.ListenerConfig listener_config = 2;
}
